[gd_scene load_steps=8 format=3 uid="uid://c18of0dynnf7n"]

[ext_resource type="Script" uid="uid://ccduf18se7ew0" path="res://scripts/components/button_SMO_blueL.gd" id="1_bipxi"]
[ext_resource type="Texture2D" uid="uid://bgbtahk53utec" path="res://assets/largeButtons_blue.png" id="2_lvj87"]
[ext_resource type="Theme" uid="uid://dix1yxdlw8hbv" path="res://assets/UI_theme_smol.tres" id="3_oy4ys"]

[sub_resource type="AtlasTexture" id="AtlasTexture_oouux"]
atlas = ExtResource("2_lvj87")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bi53k"]
atlas = ExtResource("2_lvj87")
region = Rect2(0, 96, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvstv"]
atlas = ExtResource("2_lvj87")
region = Rect2(0, 64, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8d0ty"]
atlas = ExtResource("2_lvj87")
region = Rect2(0, 32, 64, 32)

[node name="buttonSMOL" type="Panel"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(64, 32)
offset_right = 64.0
offset_bottom = 32.0
script = ExtResource("1_bipxi")

[node name="Button" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 64.0
offset_bottom = 32.0
texture_normal = SubResource("AtlasTexture_oouux")
texture_pressed = SubResource("AtlasTexture_bi53k")
texture_hover = SubResource("AtlasTexture_mvstv")
texture_disabled = SubResource("AtlasTexture_8d0ty")

[node name="textContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(60, 25)
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 3.0
offset_bottom = 16.0
mouse_filter = 2
theme_override_constants/separation = 3
alignment = 1

[node name="buttonLabel" type="Label" parent="textContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 25)
layout_mode = 2
theme = ExtResource("3_oy4ys")
theme_override_constants/line_spacing = -5
text = "button"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
